src/components/Gallery/style.scss
@import "../../styles/variables";

.wrapper {
  display: flex;
  padding: 55px;
  align-items: flex-start;
  margin: 0px 55px;

  @media screen and (min-width: $sm) {
    flex-direction: column-reverse;
    padding: 10px;
    margin: 0px 5px;
  }

  .gallery-container-with-text {
    display: flex;
    flex-wrap: wrap;
    overflow: hidden;

    @media screen and (min-width: $sm) {
      max-width: 100%;
    }

    .even {
      max-width: 23%;
      object-fit: cover;
      cursor: pointer;
      margin: 0 0 3px 3px;

      @media screen and (min-width: $sm) {
        max-width: 49%;
      }
    }
  }

  .gallery-container-without-text {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    max-width: 85%;
    margin: 0 auto;
    gap: 5px;

    @media screen and (min-width: $sm) {
      gap: 3px;
      align-items: center;
      justify-content: center;
    }

    .even {
      max-width: 350px;
      object-fit: cover;
      cursor: pointer;
    }
  }
  .text-container {
    max-width: 50%;
    @media screen and (min-width: $sm) {
      margin-top: 5rem;
      max-width: 100%;
    }
  }
}

.uneven {
  max-width: 25%;
  object-fit: cover;
  cursor: pointer;
  margin-bottom: 5px;

  @media screen and (min-width: $sm) {
    max-width: 100%;
  }
}

